force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Sent for Analysis</fullName>
            </value>
            <value>
                <fullName>Storage - Temp Shelter</fullName>
            </value>
            <value>
                <fullName>Storage - CRC</fullName>
            </value>
            <value>
                <fullName>AVFSC - Chest Freezer</fullName>
            </value>
            <value>
                <fullName>AVFSC - Upright Freezer</fullName>
            </value>
            <value>
                <fullName>AVFSC - Refrigerator</fullName>
            </value>
            <value>
                <fullName>AVFSC - Cabinet 1</fullName>
            </value>
            <value>
                <fullName>AVFSC - Cabinet 2</fullName>
            </value>
            <value>
                <fullName>AVFSC - Cabinet 3</fullName>
            </value>
            <value>
                <fullName>AVFSC - Flammables Cabinet</fullName>
            </value>
            <value>
                <fullName>AVFSC - Evidence Room General</fullName>
            </value>
            <value>
                <fullName>Returned to LEA</fullName>
            </value>
            <value>
                <fullName>AVFSC - Processing</fullName>
            </value>
            <value>
                <fullName>Consumed in Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>