force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Cytology_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Cytology_Performed_Other__c</fullName>
    <label>Ear Cytology Comments (INACTIVE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>