force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Date_Time_Found_Dead__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Found_Dead__c</fullName>
    <label>Date/Time Found Dead</label>
    <type>DateTime</type>
</CustomField>