force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Date_Time_Last_Seen_Alive__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Last_Seen_Alive__c</fullName>
    <label>Date/Time Last Seen Alive</label>
    <type>DateTime</type>
</CustomField>