force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Deceased_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Reason__c</fullName>
    <label>Deceased Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Died in Animal Shelter</fullName>
            </value>
            <value>
                <fullName>Died in Field</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>