force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Dehydration__c.field-meta.xml
<CustomField>
    <fullName>Dehydration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dehydration</label>
    <type>Checkbox</type>
</CustomField>