force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Dehydration_Degree__c.field-meta.xml
<CustomField>
    <fullName>Dehydration_Degree__c</fullName>
    <label>Dehydration Degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mild (5-7%)</fullName>
            </value>
            <value>
                <fullName>Moderate (8-10%)</fullName>
            </value>
            <value>
                <fullName>Severe (10-12%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>