force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Describe_Area_Where_Animal_Was_Found__c.field-meta.xml
<CustomField>
    <fullName>Describe_Area_Where_Animal_Was_Found__c</fullName>
    <label>Describe Area Where Animal Was Found</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>