force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Diagnostic_1__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnostic 1 (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>