force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Diagnostic_2__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnostic 2 (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>