force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Diagnostic_Result_Comments_2__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Result_Comments_2__c</fullName>
    <label>Diagnostic Result Comments 2 (INACTIVE)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>