force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Diarrhea__c.field-meta.xml
<CustomField>
    <fullName>Diarrhea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diarrhea</label>
    <type>Checkbox</type>
</CustomField>