force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Diarrhea_Vomit_Blood_Present_Describe__c.field-meta.xml
<CustomField>
    <fullName>Diarrhea_Vomit_Blood_Present_Describe__c</fullName>
    <label>Diarrhea/Vomit/Blood Present (Describe)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>