force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Did_Animal_Go_To_Partner_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Did_Animal_Go_To_Partner_Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Animal Go To Partner Hospital?</label>
    <type>Checkbox</type>
</CustomField>