force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Did_Owner_Sign_Surrender_Consent__c.field-meta.xml
<CustomField>
    <fullName>Did_Owner_Sign_Surrender_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Owner Sign Surrender/Consent?</label>
    <type>Checkbox</type>
</CustomField>