force-app/main/default/objects/Animal_Exam_Sheet__c/fields/DNA_Swab__c.field-meta.xml
<CustomField>
    <fullName>DNA_Swab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field - Check if DNA Swab is performed.</description>
    <inlineHelpText>Checkbox field - Check if DNA Swab is performed.</inlineHelpText>
    <label>DNA Swab</label>
    <type>Checkbox</type>
</CustomField>