force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Doctor_Tech__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Tech__c</fullName>
    <label>Doctor (Historical)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alison Liu, DVM</fullName>
                <label>Dr. Alison Liu, DVM</label>
            </value>
            <value>
                <fullName>Dr. Abra Foster, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Audra Harthorn, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Cathy Anderson, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Cheryl Rausch, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Colleen Shockling Dent</fullName>
                <label>Dr. Colleen Shockling Dent, DVM</label>
            </value>
            <value>
                <fullName>Dr. Jennifer Betz, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Jennifer Stressman, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Jill Kirk, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. K. Fox, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Kami Fox, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Kristi Arnquist, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Kristina Baucom, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Liz Pearlman, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Mary Lummis</fullName>
                <label>Dr. Mary Lummis, DVM</label>
            </value>
            <value>
                <fullName>Dr. Nicole Eller, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Rachel Barton, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Rachel Touroo, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Ryan Gaffke, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Sarah Kirk, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Emily Amsler, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Michelle Taylor, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Amanda Hilliard, DVM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>