force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Drug_Administered__c.field-meta.xml
<CustomField>
    <fullName>Drug_Administered__c</fullName>
    <label>Drug Administered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pentobarbital sodium</fullName>
            </value>
            <value>
                <fullName>TTD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>