force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Duodenum_Contents__c.field-meta.xml
<CustomField>
    <fullName>Duodenum_Contents__c</fullName>
    <label>Duodenum Contents</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>