force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Duodenum_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Duodenum_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duodenum Finalized</label>
    <type>Checkbox</type>
</CustomField>