force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ear__c.field-meta.xml
<CustomField>
    <fullName>Ear__c</fullName>
    <label>Ear Swab for Mites (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Mites observed</fullName>
            </value>
            <value>
                <fullName>No mites observed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>