force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ear_Swab_for_Mites__c.field-meta.xml
<CustomField>
    <fullName>Ear_Swab_for_Mites__c</fullName>
    <label>Ear Swab for Mites (INACTIVE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>