force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ear_Swab_Perfomed_Other__c.field-meta.xml
<CustomField>
    <fullName>Ear_Swab_Perfomed_Other__c</fullName>
    <label>Ear Swab Perfomed - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>