force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ears__c.field-meta.xml
<CustomField>
    <fullName>Ears__c</fullName>
    <defaultValue>&quot;AU free of erythema and debris, tympanic membrane intact. No overt masses or lesions.&quot;</defaultValue>
    <label>Ears</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>