force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ears_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Ears_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ears Finalized</label>
    <type>Checkbox</type>
</CustomField>