force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Eastern_Western_Equine_Encephalitis__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Western_Equine_Encephalitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eastern/Western Equine Encephalitis</label>
    <type>Checkbox</type>
</CustomField>