force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <inlineHelpText>Please enter your initials, today&apos;s date, and time.</inlineHelpText>
    <label>Editor</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>