force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ehrlichia_Results__c.field-meta.xml
<CustomField>
    <fullName>Ehrlichia_Results__c</fullName>
    <label>Ehrlichia Results (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>