force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Emaciation__c.field-meta.xml
<CustomField>
    <fullName>Emaciation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emaciation</label>
    <type>Checkbox</type>
</CustomField>