force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Equine_Dewormer__c.field-meta.xml
<CustomField>
    <fullName>Equine_Dewormer__c</fullName>
    <label>Equine Dewormer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ivermectin</fullName>
            </value>
            <value>
                <fullName>Pyrantel</fullName>
            </value>
            <value>
                <fullName>Fenbendazole</fullName>
            </value>
            <value>
                <fullName>Oxybendazole</fullName>
            </value>
            <value>
                <fullName>Moxidectin</fullName>
            </value>
            <value>
                <fullName>Praziquantal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>