force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Equine_Leg_Marking__c.field-meta.xml
<CustomField>
    <fullName>Equine_Leg_Marking__c</fullName>
    <label>Equine Leg Marking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equine_Leg_Marking</valueSetName>
    </valueSet>
</CustomField>