force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Esophagus__c.field-meta.xml
<CustomField>
    <fullName>Esophagus__c</fullName>
    <defaultValue>&quot;The diameter of the lumen is uniform throughout. There is no evidence of erythema, contusions, lesions, or food particulates in the lumen. Serosal and mucosal surface are smooth and shiny.&quot;</defaultValue>
    <label>Esophagus</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>