force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Esophagus_Contents__c.field-meta.xml
<CustomField>
    <fullName>Esophagus_Contents__c</fullName>
    <label>Esophagus Contents</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>