force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Esophagus_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Esophagus_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esophagus Finalized</label>
    <type>Checkbox</type>
</CustomField>