force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Euthanasia_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Euthanasia_Authorized_By__c</fullName>
    <label>Euthanasia Authorized By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr. Rachel Touroo</fullName>
                <label>Dr. Rachel Touroo, DVM</label>
            </value>
            <value>
                <fullName>Dr. Nicole Eller-Medina, DVM</fullName>
            </value>
            <value>
                <fullName>Dr. Mary Lummis, DVM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>