force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Euthanasia_Reason__c.field-meta.xml
<CustomField>
    <fullName>Euthanasia_Reason__c</fullName>
    <label>Euthanasia Reason (Historical)</label>
    <type>TextArea</type>
</CustomField>