force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Euthanasia_Reason_List__c.field-meta.xml
<CustomField>
    <fullName>Euthanasia_Reason_List__c</fullName>
    <label>Euthanasia Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Medical/Behavior</fullName>
            </value>
            <value>
                <fullName>Quality of Life</fullName>
            </value>
            <value>
                <fullName>State-Reportable Disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>