force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Euthanasia_Recommendation_Form__c.field-meta.xml
<CustomField>
    <fullName>Euthanasia_Recommendation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Euthanasia Recommendation Form</label>
    <type>Checkbox</type>
</CustomField>