force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Euthanisia__c.field-meta.xml
<CustomField>
    <fullName>Euthanisia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box for Yes</inlineHelpText>
    <label>Euthanasia</label>
    <type>Checkbox</type>
</CustomField>