force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Euthanisia_Comment__c.field-meta.xml
<CustomField>
    <fullName>Euthanisia_Comment__c</fullName>
    <label>Euthanasia Comment</label>
    <type>TextArea</type>
</CustomField>