force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Exam_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exam_Comments__c</fullName>
    <label>Diagnostic Result Comments (INACTIVE)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>