force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <formula>DATEVALUE( Exam_Date_Time__c )</formula>
    <label>Exam Date</label>
    <type>Date</type>
</CustomField>