force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Exam_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Exam_Tasks__c</fullName>
    <label>Exam Tasks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DVM Recheck - Claro</fullName>
            </value>
            <value>
                <fullName>Recheck CBC/Chem, NSAIDs</fullName>
            </value>
            <value>
                <fullName>Recheck PCV</fullName>
            </value>
            <value>
                <fullName>Weight Check - Underweight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>