force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concern</fullName>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
            <value>
                <fullName>Euthanasia</fullName>
            </value>
            <value>
                <fullName>Forensic</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Recheck</fullName>
            </value>
            <value>
                <fullName>Referral Feedback</fullName>
            </value>
            <value>
                <fullName>Tech Note</fullName>
            </value>
            <value>
                <fullName>Shelter Note</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Foster</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Health Cert</fullName>
            </value>
            <value>
                <fullName>Hospitalized</fullName>
            </value>
            <value>
                <fullName>Lab Results</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Necropsy</fullName>
            </value>
            <value>
                <fullName>Radiograph</fullName>
            </value>
            <value>
                <fullName>Reference Lab Consult</fullName>
            </value>
            <value>
                <fullName>Specialist Consult</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Histopathology</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Vaccine/Preventative</fullName>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
            <value>
                <fullName>Storm Distress/Anxiety</fullName>
            </value>
            <value>
                <fullName>Behavior Medications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>