force-app/main/default/objects/Animal_Exam_Sheet__c/fields/External_Parasites__c.field-meta.xml
<CustomField>
    <fullName>External_Parasites__c</fullName>
    <label>External Parasites</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No parasites found</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>