force-app/main/default/objects/Animal_Exam_Sheet__c/fields/External_Parasites_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Parasites_Notes__c</fullName>
    <label>External Parasites Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>