force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Eyes__c.field-meta.xml
<CustomField>
    <fullName>Eyes__c</fullName>
    <defaultValue>&quot;OU globes present and intact. Appears subjectively appropriate in size with no overt masses.&quot;</defaultValue>
    <label>Eyes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>