force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Fecal_Giardia_SNAP_Other__c.field-meta.xml
<CustomField>
    <fullName>Fecal_Giardia_SNAP_Other__c</fullName>
    <label>Fecal - Giardia Other (INACTIVE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>