force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Fecal_OPG_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Fecal_OPG_Performed_Other__c</fullName>
    <label>Fecal OP Performed - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>