force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Felv_FIV__c.field-meta.xml
<CustomField>
    <fullName>Felv_FIV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FeLV (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>